--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -1,9 +1,14 @@
-name: Build and deploy Doxygen docs to gh-pages
+name: Build Doxygen and publish to main/docs
 
 on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'docs/**'
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -14,18 +19,31 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          persist-credentials: true   # necessario per poter pushare
 
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y doxygen graphviz
+        run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
 
       - name: Run Doxygen
         run: |
           doxygen Doxyfile
+          # Assumiamo OUTPUT_DIRECTORY = docs_build e HTML in docs_build/html
 
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/html
+      - name: Copy generated HTML to docs/
+        run: |
+          rm -rf docs
+          mkdir -p docs
+          cp -R docs_build/html/* docs/
+
+      - name: Commit docs to main (if changed)
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs
+          # committa solo se ci sono cambiamenti
+          if ! git diff --cached --quiet; then
+            git commit -m "docs: update Doxygen documentation [ci skip]" || true
+            git push origin HEAD:main
+          else
+            echo "No changes in docs to commit."
+          fi
