--- a/.github/workflows/doxygen-gh-pages.yml
+++ b/.github/workflows/doxygen-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Build Doxygen and publish to main/docs
+name: Build and publish Doxygen docs (main/docs)
 
 on:
   push:
@@ -19,28 +19,19 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true   # necessario per poter pushare
+          persist-credentials: true   # serve per permettere il push
 
-      - name: Install dependencies
+      - name: Install Doxygen and Graphviz
         run: sudo apt-get update && sudo apt-get install -y doxygen graphviz
 
       - name: Run Doxygen
-        run: |
-          doxygen Doxyfile
-          # Assumiamo OUTPUT_DIRECTORY = docs_build e HTML in docs_build/html
+        run: doxygen Doxyfile
 
-      - name: Copy generated HTML to docs/
-        run: |
-          rm -rf docs
-          mkdir -p docs
-          cp -R docs_build/html/* docs/
-
-      - name: Commit docs to main (if changed)
+      - name: Commit updated docs (if changed)
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs
-          # committa solo se ci sono cambiamenti
           if ! git diff --cached --quiet; then
             git commit -m "docs: update Doxygen documentation [ci skip]" || true
             git push origin HEAD:main
